<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.user.ucrop.MainActivity">


    <View
        android:id="@+id/rectangle_border"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@drawable/my_custom_background"


        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_name"
            android:textSize="32dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/ucrop_color_toolbar"
            android:textAlignment="center"
            android:textStyle="bold"

            />
        <Button
            android:id="@+id/button_One"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textAllCaps="true"
            android:text="@string/button_one_name"
            android:textSize="18dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/ucrop_color_widget_background"
            android:background="@color/ucrop_color_statusbar"

            />

        <Button
            android:id="@+id/button_Two"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textAllCaps="true"
            android:text="@string/button_two_name"
            android:textSize="16dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/ucrop_color_widget_background"
            android:background="@color/ucrop_color_statusbar"

            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ucrop_color_toolbar"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_aspect_ratio"
            android:textAlignment="center"
            />

        <CheckBox
            android:id="@+id/cbFreestyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checjbox_freestyle_crop"
            android:textSize="16dp"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RadioButton
                android:id="@+id/rbSquare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aspect_ratio_3"
                android:textSize="16dp" />

            <RadioButton
                android:id="@+id/rbDynamic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aspect_ratio_1"
                android:textSize="16dp"
                android:checked="true"
                android:buttonTint="@color/ucrop_color_toolbar"
                />
            <RadioButton
                android:id="@+id/rbImageSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aspect_ratio_2"
                android:textSize="16dp"
                />
        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etCoordX"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="x"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="to"
                android:textAlignment="center"/>
            <EditText
                android:id="@+id/etCoordY"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="y"
                android:textAlignment="center"/>



        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ucrop_color_toolbar"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_image_size"
            android:textAlignment="center"
            />

        <CheckBox
            android:id="@+id/cbResize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_resize_image"
            android:textSize="16dp"

            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="width"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="x"
                android:textAlignment="center"/>
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="heigth"
                android:textAlignment="center"/>



        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ucrop_color_toolbar"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/header_compression_settings"
            android:textAlignment="center"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/radiobutton_compression_1"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/radiobutton_compression_2"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
            android:id="@+id/tvPercentage"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="3"
            android:textSize="36dp"
            android:layout_marginTop="15dp"
            />

            <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:max="90"
            android:progress="3"

            />
        </LinearLayout>


    </LinearLayout>


</FrameLayout>

</ScrollView>
